vlib/v/checker/tests/assign_expr_undefined_err_n.vv
fn main(){
	a := 'add'
	n := 2
	x := if a == 'add' { n + x } else { 0 }
	println(x)
}
